[project]
name = "tailucas-pylib"
version = "0.5.4"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.21",
    "cronitor>=4.7.1",
    "msgpack>=1.1.1",
    "onepassword-sdk>=0.3.1",
    "onepasswordconnectsdk>=1.5.1",
    "pika>=1.3.2",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "pyyaml>=6.0.2",
    "pyzmq>=27.0.2",
    "sentry-sdk>=2.35.1",
    "simplejson>=3.20.1",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
[project.scripts]
cred_tool = "tailucas_pylib.tools.cred_tool:main"
config_interpol = "tailucas_pylib.tools.config_interpol:main"
yaml_interpol = "tailucas_pylib.tools.yaml_interpol:main"
